--- a/public/404.html
+++ b/public/404.html
@@ -10,7 +10,11 @@
 
 <body>
     <script>
+        const url = window.location.href;
         window.location.replace("https://jacqouese.github.io");
+        setTimeout(() => {
+            window.location.href = url;
+        }, 1)
     </script>
 </body>
 
