--- a/public/404.html
+++ b/public/404.html
@@ -12,7 +12,7 @@
     <script>
         const url = window.location.href;
         const path = new URL(url).pathname;
-        window.location.replace("https://jacqouese.github.io?" + path);
+        window.location.replace("https://jacqouese.github.io?previous=" + path);
     </script>
 </body>
 
